# simhash

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: jenkins.h  simhash.h
src/: main.cpp  simhash.cpp
